Fix the alignment of the codebase

--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@ body{
     display: flex;
     flex-direction: column;
     font-family: 'Roboto';
+    
 }
 .header{
     display: flex;
     flex-direction: column;
     background-color: #1F2937;
-    height: 30vh;
     padding-bottom: 48px;
+
     
 }
 .bar{
@@ -59,7 +60,8 @@ a{
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
-    padding-bottom: 10px;
+    padding-top: 48px;
+    padding-bottom: 48px;
 }
 .secondary-text{
     color:#E5E7EB;
@@ -76,14 +78,14 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 25vh;
-    padding-bottom: 48px;
     
+    padding-top: 48px;
+    padding-bottom: 48px;
     
 }
 .info-text{
-    display: flex;
-    justify-content: center;
+    display: flex; 
+    justify-content: center; 
     align-items: center;
     font-size: 36px;
     color: #1F2937;
@@ -94,8 +96,10 @@ a{
 .information-content{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-left: 20vw;
     padding-right: 20vw;
+   
     
 }
 .info-box{
@@ -107,21 +111,19 @@ a{
     border-radius: 10%;
     
 }
-/* .information-container{
-    display: flex;
-    justify-content: space-between;
-}     */
+  
 .box{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 100px;
-    
+    align-items: center;
+    width: 200px;
 }
 .caption{
     display: flex;
-    justify-content: center;
+    justify-content: center;  
     align-items: center;
+    padding-left: 25px;
+    
 }
 .quote-container{
     background-color: #E5E7EB ;
@@ -129,32 +131,44 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 20vh;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
 }
 .quote{
-    height: 150px;
-    width: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 300;
+    padding-right: 20vw;
+    padding-left: 20vw;
 }
 .name{
-   padding-left: 5vw;  
+   display: flex;  
+   font-size: 18px;
+   font-weight: 900;
+   padding-left: 45vw;
+   padding-bottom: 28px;
 }
 .action{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 20vh;
+    padding-top: 30px;
+    padding-bottom: 30px;
+ 
 }
 .action-container{
     display: flex;
     background-color: #3992F6;
-    height: 100px;
-    width: 500px;
+    height: 200px;
+    width: 600px;
     justify-content: center;
     align-items: center;
+    gap: 24px;
 }
 .action-copy{
     display: flex;
@@ -167,15 +181,22 @@ a{
     justify-content: center;
     align-items: center;
     background-color: #1F2937;
-    height: px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
     
 }
 .copyright{
     color: #E5E7EB;
+    font-size: 18px;
 }
 button{
     background-color: #3992F6;
     color: #E5E7EB;
     border: none;
+    border-radius: 10%;
+}
+.action-btn{
+    border: 1px solid #F9FAF8;
     border-radius: 10%;
 }
